--- a/EXPLORE/EXPLORE/appsettings.Development.json
+++ b/EXPLORE/EXPLORE/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=ExploreDB;Trusted_Connection=true "
+  },
+  "TokenKey":  "regist or generate token",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
